MODINV-1391 - Data Import profiles will map invalid statistical codes (#922)